# moraine-backup

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  moraine.example.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  windows-gui.yml  windows-installer.yml
assets/: moraine-gui.desktop
debian/: cargo-checksum.json  changelog  control  copyright  manpages  moraine.1  moraine.install  rules  watch
debian/patches/: appstream-metadata-license.patch  drop-windows-build-dependency.patch  series
debian/tests/: control  smoke
debian/upstream/: metadata
deploy/: apt-distributions  apt-repo-setup.sh  archive-releases.sh  bump-recipes.sh  bump.sh  cdn-publish.sh  cdn-pull.sh  cdn-refresh.sh
deploy/systemd/: moraine-cdn-pull.service  moraine-cdn-pull.timer
docs/: debian-upload.md  releasing.md
man/: moraine-gui.1
packaging/alpine/: APKBUILD  README.md
packaging/appimage/: README.md  build-appimage.sh
packaging/aur/: .SRCINFO  PKGBUILD  README.md
packaging/chocolatey/: README.md  moraine.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/flatpak/: README.md  cargo-sources.json  flathub.json  io.thern.moraine.metainfo.xml  io.thern.moraine.yml
packaging/freebsd/: Makefile  README.md  pkg-descr
packaging/gentoo/: README.md  moraine-0.1.19.ebuild  moraine-0.2.1.ebuild
packaging/homebrew/: README.md  moraine.rb
packaging/mpr/: PKGBUILD  README.md
packaging/nix/: README.md  flake.nix
packaging/nixpkgs/: README.md  package.nix
packaging/obs/: README.md  _service
packaging/rpm/: README.md  moraine.spec
packaging/scoop/: README.md  moraine.json
packaging/snap/: README.md  snapcraft.yaml
packaging/void/: README.md  template
packaging/windows/: bundle-gtk.sh  moraine-gui.iss  moraine.iss
packaging/winget/: README.md  TheJonaz.Moraine.installer.yaml  TheJonaz.Moraine.locale.en-US.yaml  TheJonaz.Moraine.yaml
src/: config.rs  healthcheck.rs  history.rs  lib.rs  lock.rs  main.rs  notify.rs  prune.rs  rclone.rs  rsync.rs  snapshot.rs  ssh.rs  tools.rs  vpn.rs
