[package]
name = "moraine"
version = "0.1.0"
edition = "2021"
description = "Moraine — snapshot-based backup over SSH/rsync and rclone"
license = "MIT"
build = "build.rs"

[lib]
name = "moraine"
path = "src/lib.rs"

[[bin]]
name = "moraine"
path = "src/main.rs"

[[bin]]
name = "moraine-gui"
path = "src/bin/gui.rs"
# The GUI binary needs the `gui` feature (on by default). With
# `--no-default-features` only the `moraine` CLI builds — useful for Debian,
# which packages the CLI without the iced/wgpu stack.
required-features = ["gui"]

[features]
default = ["gui"]
gui = ["dep:iced", "dep:tokio", "dep:dark-light", "dep:open", "dep:rfd"]

[dependencies]
# ── CLI + library core (small, all packaged in Debian) ──
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# ── GUI-only, gated behind the `gui` feature ──
# Desktop client (iced) + async execution of rsync (tokio).
iced = { version = "0.13", features = ["tokio", "image"], optional = true }
tokio = { version = "1", features = ["process", "io-util"], optional = true }
# System light/dark theme + open a link in the browser.
dark-light = { version = "1", optional = true }
open = { version = "5", optional = true }

# Native file dialog (pick SSH key), GUI-only. The Linux backend differs from
# win/mac, so the rfd features are split per target:
#  * Linux: xdg-desktop-portal (no GTK runtime dependency).
#  * Windows/macOS: the built-in win32/cocoa dialogs (no extra feature needed).
[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"], optional = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["tokio"], optional = true }

# ─────────────────────────── paketering (.deb) ───────────────────────────
[package.metadata.deb]
maintainer = "Jonaz Thern <info@thern.io>"
copyright = "2026, Jonaz Thern"
section = "utils"
priority = "optional"
extended-description = """\
Moraine — snapshot-based backup with hardlinked snapshots, retention/pruning, \
selective restore and scheduling. Backends: rsync over SSH and rclone \
(cloud, FTP, SMB, WebDAV, S3, Drive, B2 ...). Includes both the CLI `moraine` \
and the desktop client `moraine-gui`."""
depends = "$auto, rsync, openssh-client"
recommends = "rclone, xdg-desktop-portal"
assets = [
    ["target/release/moraine", "usr/bin/", "755"],
    ["target/release/moraine-gui", "usr/bin/", "755"],
    ["assets/moraine-gui.desktop", "usr/share/applications/", "644"],
    ["assets/moraine.svg", "usr/share/icons/hicolor/scalable/apps/moraine.svg", "644"],
    ["assets/moraine-256.png", "usr/share/icons/hicolor/256x256/apps/moraine.png", "644"],
    ["assets/moraine-128.png", "usr/share/icons/hicolor/128x128/apps/moraine.png", "644"],
    ["assets/moraine-64.png", "usr/share/icons/hicolor/64x64/apps/moraine.png", "644"],
    ["assets/moraine-48.png", "usr/share/icons/hicolor/48x48/apps/moraine.png", "644"],
    ["CHANGELOG.md", "usr/share/doc/moraine/", "644"],
]
