[package]
name = "moraine"
version = "0.1.6"
edition = "2021"
description = "Moraine — snapshot-based backup over SSH/rsync and rclone"
license = "MIT"
build = "build.rs"

[lib]
name = "moraine"
path = "src/lib.rs"

[[bin]]
name = "moraine"
path = "src/main.rs"

[[bin]]
name = "moraine-gui"
path = "src/bin/gui.rs"
# The GUI binary needs the `gui` feature (on by default). With
# `--no-default-features` only the `moraine` CLI builds.
required-features = ["gui"]

[features]
default = ["gui"]
gui = ["dep:gtk4", "dep:async-channel"]

[dependencies]
# ── CLI + library core (small, all packaged in Debian) ──
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# ── GUI-only, gated behind the `gui` feature ──
# Desktop client built on GTK 4 (native file dialogs, theme, browser-open all
# come from GTK/gio). async-channel streams command output to the main loop.
# Both crates are packaged in Debian, so the GUI can ship in official Debian.
gtk4 = { version = "0.11", optional = true, features = ["v4_10"] }
async-channel = { version = "2", optional = true }

# ─────────────────────────── paketering (.deb) ───────────────────────────
[package.metadata.deb]
maintainer = "Jonaz Thern <info@thern.io>"
copyright = "2026, Jonaz Thern"
section = "utils"
priority = "optional"
extended-description = """\
Moraine — snapshot-based backup with hardlinked snapshots, retention/pruning, \
selective restore and scheduling. Backends: rsync over SSH and rclone \
(cloud, FTP, SMB, WebDAV, S3, Drive, B2 ...). Includes both the CLI `moraine` \
and the desktop client `moraine-gui`."""
depends = "$auto, rsync, openssh-client"
recommends = "rclone, gnupg, xdg-desktop-portal"
assets = [
    ["target/release/moraine", "usr/bin/", "755"],
    ["target/release/moraine-gui", "usr/bin/", "755"],
    ["assets/moraine-gui.desktop", "usr/share/applications/", "644"],
    ["assets/moraine.svg", "usr/share/icons/hicolor/scalable/apps/moraine.svg", "644"],
    ["assets/moraine-256.png", "usr/share/icons/hicolor/256x256/apps/moraine.png", "644"],
    ["assets/moraine-128.png", "usr/share/icons/hicolor/128x128/apps/moraine.png", "644"],
    ["assets/moraine-64.png", "usr/share/icons/hicolor/64x64/apps/moraine.png", "644"],
    ["assets/moraine-48.png", "usr/share/icons/hicolor/48x48/apps/moraine.png", "644"],
    ["assets/hero-bg.png", "usr/share/moraine/assets/", "644"],
    ["assets/moraine-64.png", "usr/share/moraine/assets/", "644"],
    ["assets/moraine-256.png", "usr/share/moraine/assets/", "644"],
    ["CHANGELOG.md", "usr/share/doc/moraine/", "644"],
]
