[package]
name = "moraine"
version = "0.2.1"
edition = "2021"
# std::fs::File::try_lock (the per-target run lock) stabilized in 1.89.
rust-version = "1.89"
description = "Moraine — snapshot-based backup over SSH/rsync and rclone"
license = "MIT"
authors = ["Jonaz Thern <info@thern.io>"]
repository = "https://github.com/TheJonaz/moraine-backup"
homepage = "https://moraine.thern.io"
readme = "README.md"
keywords = ["backup", "rsync", "rclone", "snapshot", "ssh"]
categories = ["command-line-utilities", "filesystem"]
build = "build.rs"
# Keep the crates.io tarball to what's needed to build and use the crate —
# without this, `cargo package` drags in packaging/, deploy/, .github/ and
# every PNG in assets/ (111 files).
include = [
    # gitignore-style patterns: anchor with '/' so e.g. "README.md" doesn't
    # also match packaging/*/README.md.
    "/src",
    "/build.rs",
    "/moraine.example.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/assets/moraine.svg",
    # build.rs embeds the icon into the Windows .exe.
    "/assets/moraine.ico",
]

[lib]
name = "moraine"
path = "src/lib.rs"

[[bin]]
name = "moraine"
path = "src/main.rs"

[[bin]]
name = "moraine-gui"
path = "src/bin/gui.rs"
# The GUI binary needs the `gui` feature (on by default). With
# `--no-default-features` only the `moraine` CLI builds.
required-features = ["gui"]

[features]
default = ["gui", "tray"]
gui = ["dep:gtk4", "dep:async-channel"]
# Linux system-tray icon (ksni / StatusNotifierItem over D-Bus). Implies `gui`.
# Left out of the Windows/macOS GUI builds — ksni is Linux-only.
tray = ["gui", "dep:ksni"]

[dependencies]
# ── CLI + library core (small, all packaged in Debian) ──
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# ── GUI-only, gated behind the `gui` feature ──
# Desktop client built on GTK 4 (native file dialogs, theme, browser-open all
# come from GTK/gio). async-channel streams command output to the main loop.
# Both crates are packaged in Debian, so the GUI can ship in official Debian.
gtk4 = { version = "0.11", optional = true, features = ["v4_10"] }
async-channel = { version = "2", optional = true }
# System-tray icon (StatusNotifierItem). GTK4 dropped GtkStatusIcon, so the tray
# is provided by ksni over D-Bus. `blocking` + `async-io` keeps it a pure-Rust
# dependency (zbus, no libdbus C lib and no tokio). NOTE: ksni is not yet in
# Debian, so the official Debian recipe must vendor it or drop the tray.
ksni = { version = "0.3", default-features = false, features = ["blocking", "async-io"], optional = true }

# Windows-only: embed the app icon + version info into the .exe (build.rs). Gated
# on a Windows host, which is where the Windows release is built.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# ─────────────────────────── paketering (.deb) ───────────────────────────
[package.metadata.deb]
maintainer = "Jonaz Thern <info@thern.io>"
copyright = "2026, Jonaz Thern"
section = "utils"
priority = "optional"
extended-description = """\
Moraine — snapshot-based backup with hardlinked snapshots, retention/pruning, \
selective restore and scheduling. Backends: rsync over SSH and rclone \
(cloud, FTP, SMB, WebDAV, S3, Drive, B2 ...). Includes both the CLI `moraine` \
and the desktop client `moraine-gui`."""
depends = "$auto, rsync, openssh-client"
recommends = "rclone, gnupg, xdg-desktop-portal, libnotify-bin"
assets = [
    ["target/release/moraine", "usr/bin/", "755"],
    ["target/release/moraine-gui", "usr/bin/", "755"],
    ["assets/moraine-gui.desktop", "usr/share/applications/", "644"],
    ["assets/moraine.svg", "usr/share/icons/hicolor/scalable/apps/moraine.svg", "644"],
    ["assets/moraine-256.png", "usr/share/icons/hicolor/256x256/apps/moraine.png", "644"],
    ["assets/moraine-128.png", "usr/share/icons/hicolor/128x128/apps/moraine.png", "644"],
    ["assets/moraine-64.png", "usr/share/icons/hicolor/64x64/apps/moraine.png", "644"],
    ["assets/moraine-48.png", "usr/share/icons/hicolor/48x48/apps/moraine.png", "644"],
    ["assets/hero-bg.png", "usr/share/moraine/assets/", "644"],
    ["assets/moraine-64.png", "usr/share/moraine/assets/", "644"],
    ["assets/moraine-256.png", "usr/share/moraine/assets/", "644"],
    ["CHANGELOG.md", "usr/share/doc/moraine/", "644"],
]
